--- a/resources/lang/English.xml
+++ b/resources/lang/English.xml
@@ -76,6 +76,7 @@
 <entry key="gui_popup_preferences_btn_restore">Restore Default</entry>
 <entry key="gui_popup_preferences_proplabel_cleanups">Pre-setup clean up cycles</entry>
 <entry key="gui_popup_preferences_proplabel_lang">Language</entry>
+<entry key="gui_popup_preferences_proplabel_logreduction">Log file reduction %</entry>
 <entry key="gui_popup_preferences_proplabel_makecmd">Compilation command</entry>
 <entry key="gui_popup_preferences_proplabel_maxlogsize">Maximum Log Size</entry>
 <entry key="gui_popup_preferences_proplabel_maxthreads">Maximum thread count</entry>
